Tons of styling improvements and dark mode fixes

--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
     padding-top: 50px;
     flex-wrap: wrap;
     min-width: 270px;
+    scale: 1;
 }
 
 
@@ -41,7 +42,7 @@ body {
     display: flex;
     flex-direction: column;
     margin-left: 5px;
-    margin-right: 5px;
+    justify-content: 5px;
 }
 
 .game-top,
@@ -59,14 +60,11 @@ body {
 }
 
 .game-center {
-    flex-grow: 5;
     padding-left: 5px;
     padding-right: 5px;
     text-align: center;
-    margin-top: 7px;
     display: flex;
     overflow-x: auto;
-    padding-top: 15px;
 }
 
 
@@ -126,7 +124,7 @@ body {
 
 #stats>div {
     min-width: fit-content;
-    padding: 5px;
+    padding: 3px;
     /*! border: 1px solid black; */
     user-select: none;
     -moz-user-select: none;
@@ -134,6 +132,7 @@ body {
     -ms-user-select: none;
 
     display: flex;
+    align-items: center;
 }
 
 [data-enabled="true"] {
@@ -153,12 +152,11 @@ body {
     width: 100vw;
 }
 
-#toggle-speed,
+/* #toggle-speed,
 #toggle-pause {
     all: unset;
     cursor: pointer;
     width: 90px;
-    background-color: #646161;
     color: white;
     user-select: none;
     -moz-user-select: none;
@@ -170,16 +168,15 @@ body {
     text-align: center;
     margin-right: 5px;
     padding-block: 5px;
-    padding-block: 15px;
-    padding-inline: 16px;
-}
+    padding-block: 6px;
+    padding-inline: 5px;
+    height: fit-content;
+} */
 
 #toggle-pause {
     background-color: white;
     width: fit-content;
-    padding-right: 10px;
     /*! border: 1px solid black; */
-    padding-left: 10px;
 }
 
 table,
@@ -258,9 +255,46 @@ tr {
     background-color: black;
 }
 
+#restartGameButton {
+    background-color: rgb(237, 155, 155);
+
+}
+
 @media only screen and (max-width: 600px) {
     #stats {
-        justify-content: center;
         margin-block: 5px;
+        /*! flex-direction: column; */
+        justify-content: center;
+    }
+    #stats > div {
+        text-align: center;
+        display: flex;
+        justify-content: center;
+        font-size: 24px;
+        padding-inline: 21px;
+        width: ;
+        padding-inline: 25px;
+    }
+    .building {
+        scale: 0.75;
+        margin-right: 0px;
+    }
+    .game-center > div {
+        margin-inline: -10px;
+        margin-top: -44px;
+        margin-bottom: -22px;
+    }
+    .mobile-100width {
+        width: 100vw;
+    }
+}
+
+@media only screen and (max-width: 300px) {
+    #name {
+        font-size: 15px;
+        margin-bottom: 0px;
+    }
+    .button {
+        font-size: 13px;
     }
 }
